force-app/main/default/objects/CharactDetails__c/CharactDetails__c.object-meta.xml
<CustomObject>
    <label>Characteristics Classifier (Details)</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Characteristics Classifier (Details)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>