force-app/main/default/objects/CharactDetails__c/fields/ClassifierMain__c.field-meta.xml
<CustomField>
    <fullName>ClassifierMain__c</fullName>
    <label>ClassifierMain</label>
    <referenceTo>CharactClassifMain__c</referenceTo>
    <relationshipLabel>Characteristics Classifier (Details)</relationshipLabel>
    <relationshipName>Characteristics_Classifier_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>