force-app/main/default/objects/CharactDetails__c/fields/OldID__c.field-meta.xml
<CustomField>
    <fullName>OldID__c</fullName>
    <label>OldID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>