force-app/main/default/objects/CharactDetails__c/fields/ParamType__c.field-meta.xml
<CustomField>
    <fullName>ParamType__c</fullName>
    <formula>ClassifierMain__r.ExtKey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParamType</label>
    <type>Text</type>
</CustomField>