force-app/main/default/objects/CharactDetails__c/fields/SpecAttrib__c.field-meta.xml
<CustomField>
    <fullName>SpecAttrib__c</fullName>
    <label>Spec. Attribute</label>
    <length>80</length>
    <type>Text</type>
</CustomField>