force-app/main/default/objects/CharactDetails__c/fields/SpecAttribType__c.field-meta.xml
<CustomField>
    <fullName>SpecAttribType__c</fullName>
    <label>Spec. Attrib. Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>LenType</fullName>
            </value>
            <value>
                <fullName>EndsType</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>