force-app/main/default/objects/CharactDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ID_ERP__c</columns>
    <columns>IsActive__c</columns>
    <columns>ParamType__c</columns>
    <columns>SpecAttribType__c</columns>
    <columns>SpecAttrib__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SpecAttrib__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All</label>
</ListView>